[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/LoadingScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="CenterContainer"]
margin_left = 105.0
margin_top = 68.0
margin_right = 215.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Loading..."

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipLabel" type="Label" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 23.0
text = "Tip: Don't forget to tweak your settings to optimize your expereience"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
